"""Tests for `sqlalchemy_easy_softdelete` package."""

import pytest
from sqlalchemy import func, insert, select, table, text
from sqlalchemy.orm import Query, joinedload, selectinload, subqueryload
from sqlalchemy.sql import Select

from tests.model import (
    SDBaseRequest,
    SDChild,
    SDChildChild,
    SDDerivedRequest,
    SDParent,
    SDSimpleTable,
    SDTableThatShouldNotBeSoftDeleted,
)
from tests.utils import is_filtering_for_softdeleted


def test_query_single_table(snapshot, seeded_session, rewriter):
    """Query with one table"""
    test_query: Query = seeded_session.query(SDChild)

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert (
        is_filtering_for_softdeleted(
            soft_deleted_rewritten_statement,
            {
                SDChild.__table__,
            },
        )
        is True
    )

    assert [repr(c) for c in sorted(test_query.all(), key=lambda i: i.id)] == snapshot


def test_query_with_join(snapshot, seeded_session, rewriter):
    """Query with a simple join"""
    test_query: Query = seeded_session.query(SDChild).join(SDParent)  # noqa -- wrong typing stub in SA

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert (
        is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDChild.__table__, SDParent.__table__}) is True
    )

    assert [repr(c) for c in sorted(test_query.all(), key=lambda i: i.id)] == snapshot


def test_query_union_sdchild(snapshot, seeded_session, rewriter):
    """Two queries joined via UNION"""
    test_query: Query = seeded_session.query(SDChild).union(seeded_session.query(SDChild))

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDChild.__table__}) is True

    assert [repr(c) for c in sorted(test_query.all(), key=lambda i: i.id)] == snapshot


def test_query_union_sdchild_core(snapshot, seeded_session, rewriter):
    """Two queries joined via UNION, using SQLAlchemy Core"""
    sdchild = SDChild.__table__

    select_as_core = (select(sdchild.c.id, sdchild.c.parent_id).select_from(sdchild)).union(
        select(sdchild.c.id, sdchild.c.parent_id).select_from(sdchild)
    )

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(select_as_core)

    assert is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDChild.__table__}) is True


def test_query_with_union_but_union_softdelete_disabled(snapshot, seeded_session, rewriter):
    """Two queries joined via UNION but the second one has soft-delete disabled"""

    # Two SDChild .all() queries with results joined via UNION
    # the first one has soft delete applied
    # the second one has soft delete DISABLED
    # the second query is a superset of the first one, and results in
    # all objects in the DB being returned
    test_query: Query = seeded_session.query(SDChild).union(
        seeded_session.query(SDChild).execution_options(include_deleted=True)
    )

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDChild.__table__}) is True

    all_children: list[SDChild] = seeded_session.query(SDChild).execution_options(include_deleted=True).all()

    assert sorted(test_query.all(), key=lambda x: x.id) == sorted(all_children, key=lambda x: x.id)

    assert [repr(c) for c in sorted(test_query.all(), key=lambda i: i.id)] == snapshot


def test_ensure_aggregate_from_multiple_table_deletion_works_active_object_count(snapshot, seeded_session, rewriter):
    """Aggregate function from a query that contains a join"""
    test_query: Query = seeded_session.query(SDChild).join(SDParent).with_entities(func.count())  # noqa

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDChild.__table__}) is True

    assert test_query.count() == snapshot


def test_ensure_table_with_inheritance_works(snapshot, seeded_session, rewriter):
    test_query: Query = seeded_session.query(SDDerivedRequest)

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert is_filtering_for_softdeleted(soft_deleted_rewritten_statement, {SDBaseRequest.__table__}) is True

    test_query_results = test_query.all()
    assert len(test_query_results) == 2
    assert [repr(r) for r in sorted(test_query_results, key=lambda i: i.id)] == snapshot

    all_active_and_deleted_derived_requests = (
        seeded_session.query(SDDerivedRequest).execution_options(include_deleted=True).all()
    )

    assert len(all_active_and_deleted_derived_requests) == 3
    assert [repr(r) for r in sorted(all_active_and_deleted_derived_requests, key=lambda i: i.id)] == snapshot


def test_ensure_table_with_inheritance_works_query_base(snapshot, seeded_session, rewriter):
    """
    Querying for a polymorphic entity *without JOIN* should work when fields contained in
    derived entities are lazily fetched.
    """

    # Query the BASE entity, without joins.
    test_query: Query = seeded_session.query(SDBaseRequest).filter(SDBaseRequest.request_type == "sdderivedrequest")

    request: SDDerivedRequest = test_query.first()

    try:
        # Accessing a field in a SDDerived Request will trigger an additional query with
        # a `FromStatement` as the statement, instead of a normal Select
        _ = request.derived_field
    except Exception as exc:
        raise AssertionError(f"Exception was raised {exc}") from exc


def test_query_with_text_clause_as_table(snapshot, seeded_session, rewriter):
    """We cannot parse information from a literal text table name -- return unchanged"""

    # Table as a TextClause
    test_query_text_clause: Select = select(text("id")).select_from(text("sdderivedrequest"))
    # Strip trailing whitespace from SQL lines for consistent comparison
    sql = "\n".join(line.rstrip() for line in str(rewriter.rewrite_statement(test_query_text_clause)).splitlines())
    assert sql == snapshot


def test_query_with_table_clause_as_table(snapshot, seeded_session, rewriter):
    """We cannot parse information from a literal text table name -- return unchanged"""

    # Table as a TableClause
    test_query_table_clause: Select = select(text("id")).select_from(table("sdderivedrequest"))
    # Strip trailing whitespace from SQL lines for consistent comparison
    sql = "\n".join(line.rstrip() for line in str(rewriter.rewrite_statement(test_query_table_clause)).splitlines())
    assert sql == snapshot


def test_insert_with_returning(snapshot, seeded_session, rewriter, db_connection):
    """Insert with RETURNING is considered a *Select* by SQLAlchemy, since it returns data :dizzy:
    that means we need to actively protect against this case"""

    # RETURNING is not supported in SQLite
    if db_connection.dialect.name == "sqlite":
        pytest.skip('SQLite does not support "INSERT...RETURNING"')

    insert_stmt = insert(SDSimpleTable).values(int_field=10).returning(SDSimpleTable)

    # Generate an Insert + RETURNING
    insert_returning = select(SDSimpleTable).from_statement(insert_stmt)

    result = seeded_session.execute(insert_returning)

    assert list(result)[0][0].int_field == 10


def test_query_with_more_than_one_join(snapshot, seeded_session, rewriter):
    test_query = (
        seeded_session
        .query(SDParent)
        .join(SDChild)
        .join(SDChildChild)
        .filter(
            SDParent.id > 0,
        )
    )

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert (
        is_filtering_for_softdeleted(
            soft_deleted_rewritten_statement,
            {
                SDParent.__table__,
                SDChild.__table__,
                SDChildChild.__table__,
            },
        )
        is True
    )


def test_query_with_same_field_as_softdelete_field_but_ignored(seeded_session, rewriter):
    """Test that a query with a field that has the same name as the soft-delete field
    but is ignored, does not get rewritten"""

    test_query = seeded_session.query(SDTableThatShouldNotBeSoftDeleted)

    soft_deleted_rewritten_statement = rewriter.rewrite_statement(test_query.statement)

    assert (
        is_filtering_for_softdeleted(
            soft_deleted_rewritten_statement,
            {
                SDTableThatShouldNotBeSoftDeleted.__table__,
            },
        )
        is False
    )


def test_query_with_joinedload_filters_soft_deleted(seeded_session, rewriter):
    """Test that joinedload properly filters soft-deleted related records.

    This is a regression test for issue #33: Soft Deletion in Joined Subqueries.
    When using joinedload(), SQLAlchemy creates subqueries in the JOIN clause,
    and these subqueries must also have soft-delete filters applied.
    """
    # Query parent with eagerly loaded children using joinedload
    parent = seeded_session.query(SDParent).options(joinedload(SDParent.children)).filter(SDParent.id == 1000).first()

    # Parent should exist
    assert parent is not None
    assert parent.id == 1000

    # All loaded children should be non-deleted (deleted_at should be None)
    # This verifies that the soft-delete filter was applied to the joinedload subquery
    for child in parent.children:
        assert child.deleted_at is None, f"Child {child.id} should not be deleted but has deleted_at={child.deleted_at}"


def test_query_with_selectinload_filters_soft_deleted(seeded_session, rewriter):
    """Test that selectinload properly filters soft-deleted related records.

    selectinload uses a separate SELECT ... WHERE id IN (...) query to load related records.
    """
    parent = seeded_session.query(SDParent).options(selectinload(SDParent.children)).filter(SDParent.id == 1000).first()

    assert parent is not None
    assert parent.id == 1000

    # All loaded children should be non-deleted
    for child in parent.children:
        assert child.deleted_at is None, f"Child {child.id} should not be deleted but has deleted_at={child.deleted_at}"


def test_query_with_subqueryload_filters_soft_deleted(seeded_session, rewriter):
    """Test that subqueryload properly filters soft-deleted related records.

    subqueryload uses a subquery to load all related records in one query.
    """
    parent = seeded_session.query(SDParent).options(subqueryload(SDParent.children)).filter(SDParent.id == 1000).first()

    assert parent is not None
    assert parent.id == 1000

    # All loaded children should be non-deleted
    for child in parent.children:
        assert child.deleted_at is None, f"Child {child.id} should not be deleted but has deleted_at={child.deleted_at}"


def test_query_with_nested_joinedload_filters_soft_deleted(seeded_session, rewriter):
    """Test that chained/nested joinedload properly filters soft-deleted records at all levels.

    This tests: Parent -> Children -> Grandchildren with joinedload at each level.
    """
    parent = (
        seeded_session
        .query(SDParent)
        .options(joinedload(SDParent.children).joinedload(SDChild.child_children))
        .filter(SDParent.id == 1000)
        .first()
    )

    assert parent is not None
    assert parent.id == 1000

    # All children should be non-deleted
    for child in parent.children:
        assert child.deleted_at is None, f"Child {child.id} should not be deleted"

        # All grandchildren should also be non-deleted
        for grandchild in child.child_children:
            assert grandchild.deleted_at is None, (
                f"Grandchild {grandchild.id} should not be deleted but has deleted_at={grandchild.deleted_at}"
            )


def test_query_with_mixed_eager_loading_strategies(seeded_session, rewriter):
    """Test mixing different eager loading strategies in the same query.

    Uses joinedload for children and selectinload for grandchildren.
    """
    parent = (
        seeded_session
        .query(SDParent)
        .options(joinedload(SDParent.children).selectinload(SDChild.child_children))
        .filter(SDParent.id == 1000)
        .first()
    )

    assert parent is not None

    # All children should be non-deleted
    for child in parent.children:
        assert child.deleted_at is None, f"Child {child.id} should not be deleted"

        # All grandchildren should also be non-deleted
        for grandchild in child.child_children:
            assert grandchild.deleted_at is None, f"Grandchild {grandchild.id} should not be deleted"


def test_query_with_multiple_parents_and_eager_loading(seeded_session, rewriter):
    """Test eager loading across multiple parent records.

    Ensures soft-delete filtering works when loading children for multiple parents.
    """
    parents = (
        seeded_session
        .query(SDParent)
        .options(joinedload(SDParent.children))
        .filter(SDParent.id.in_([1000, 1001]))
        .all()
    )

    assert len(parents) == 2

    for parent in parents:
        # All children of each parent should be non-deleted
        for child in parent.children:
            assert child.deleted_at is None, f"Child {child.id} of parent {parent.id} should not be deleted"


def test_eager_loading_does_not_affect_normal_soft_delete_filtering(seeded_session, rewriter):
    """Verify that adding eager loading options doesn't break normal soft-delete filtering.

    The parent table itself should still be filtered for soft-deleted records.
    """
    # Parent 1002 is soft-deleted, so it should not appear in results
    parents = seeded_session.query(SDParent).options(joinedload(SDParent.children)).all()

    # Should only get parents 1000 and 1001, not 1002 (which is deleted)
    parent_ids = [p.id for p in parents]
    assert 1000 in parent_ids
    assert 1001 in parent_ids
    assert 1002 not in parent_ids, "Soft-deleted parent 1002 should not be in results"
